<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_import_excel"
            android:icon="@drawable/ic_menu_import_excel"
            android:title="@string/navigation_drawer_import_excel" />

        <item
            android:id="@+id/nav_import_photo_zip"
            android:icon="@drawable/ic_menu_import_photo_zip"
            android:title="@string/navigation_drawer_import_photo_zip" />

        <item
            android:id="@+id/nav_report_class"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/navigation_drawer_report_class" />

        <item
            android:id="@+id/nav_report_course"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/navigation_drawer_report_course" />

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/navigation_drawer_about" />

    </group>

</menu>
