<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_late"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_late"
        android:title="@string/action_late"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_correct"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_correct"
        android:title="@string/action_correct"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_edit"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom"/>
</menu>
