<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".About"
    tools:showIn="@layout/activity_about">

    <ImageView
        android:id="@+id/ubb_logo"
        android:contentDescription="@string/ubb_logo"
        android:background="@drawable/ubb_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/credit1"
        android:layout_below="@id/ubb_logo"
        android:layout_marginTop="60dp"
        android:text="@string/about_credit1"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/credit2"
        android:layout_below="@id/credit1"
        android:text="@string/about_credit2"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendEmail"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/credit3"
        android:layout_below="@id/credit2"
        android:text="@string/about_credit3"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
