<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:padding="10dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_year"
        android:layout_marginTop="15dp"
        android:hint="@string/courses_year"
        android:textSize="15sp"
        android:maxLength="4"
        android:inputType="number"/>

    <EditText
        android:layout_below="@id/edit_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_semester"
        android:layout_marginTop="15dp"
        android:layout_alignLeft="@+id/edit_year"
        android:layout_alignStart="@+id/edit_year"
        android:hint="@string/courses_semester"
        android:textSize="15sp"
        android:maxLength="1"
        android:inputType="number"/>

    <EditText
        android:layout_below="@id/edit_semester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_section"
        android:layout_marginTop="15dp"
        android:layout_alignLeft="@+id/edit_semester"
        android:layout_alignStart="@+id/edit_semester"
        android:hint="@string/courses_section"
        android:textSize="15sp"
        android:maxLength="1"
        android:inputType="number"/>

</RelativeLayout>